test/NameLookup/Inputs/multi-file-3.code
// Part of the multi-file.code test.

fn ~~~(x: Int, y: Int) -> Bool { // expected-error{{operator implementation without matching operator declaration}}
  return x <= y
}

fn test3() {
  var a = funcOrVar // expected-error{{cannot find 'funcOrVar' in scope}}

  var s = SomeStruct(value: 42) // use the SomeStruct from multi-file.code

  var tilde: Bool = 1 ~~~ 2 // expected-error{{operator is not a known binary operator}}

  var di = DefaultInit()
}

protocol P3 {
  fn foo()
}

class Superclass {
  fn method() { }
}

class Subclass : Superclass {
  override fn method() { }
}
